	All callers changed.
	(pcre_compile_error): Improve diagnostics.
	* std_hooks.lua (ignore_file): Fix logic to skip malformed regexes
	on subsequent calls.  Improve diagnostics.
	* lua.cc (regex.search): Use bare lua_error, not luaL_error, for
	regex compile or match failures.
	* tests/syntax_errors_in_.mtn-ignore: New test.
	* testsuite.lua: Add it.

2006-12-27  Zack Weinberg  <zackw@panix.com>

	* pcrewrap.hh (pcre::compile_error, pcre::match_error): Simplify.
	Constructor now takes an i18n_format const &.
	(pcre::study_error, pcre::fullinfo_error): Delete.
	* pcrewrap.cc (pcre_compile_error, pcre_study_error, pcre_match_error):
	New functions.
	(compile, get_capturecount, match): Use them.
	(compile_error_message, compile_error::compile_error)
	(match_error::match_error, fullinfo_error::fullinfo_error): Delete.

	* lua.cc (regex.search): Simplify error handling.
	* luaext_globish.cc (globish.match): Likewise.
	* po/POTFILES.in: Add pcrewrap.cc.

2006-12-27  Zack Weinberg  <zackw@panix.com>
	* pcrewrap.cc, pcrewrap.hh: Change "const T" to "T const" throughout.

2006-12-27  Zack Weinberg  <zackw@panix.com>

	* pcrewrap.cc, pcrewrap.hh: Remove redundant includes.
	Add a couple of "using"s.  Improve commentary.  Fix formatting.
	Add editor control comments to bottoms of files, and de-tabify.
	Refactor construction of regex objects to facilitate precompilation.
	Always call pcre_study at construction time, and remove separate
	study() method.

2006-12-18  Zack Weinberg  <zackw@panix.com>

	* pcre: New directory, contains trimmed-down version of PCRE library.
	* Makefile.am: Add support for compiling either with our bundled
	PCRE or with a system-provided library.
	* m4/pcre.m4: New file, provides MTN_LIB_PCRE.
	* configure.ac: Use MTN_LIB_PCRE.
	* debian/control: Adjust Build-Depends.

	* m4/boost.m4: Use libboost_filesystem, not libboost_regex, in
	BOOST_STATIC_LINK_OPTION.  Kill MTN_BOOST_LIB_REGEX.
	* .mtn-ignore: Add a few missing files.
