@@ -15,7 +15,7 @@ copy("stderr", "unknownerr")
 check(qgrep("foo", "unknown"))
 check(not qgrep("bar", "unknown"))
 check(not qgrep("baz", "unknown"))
-check(qgrep("WARNING", "unknownerr"))
+check(qgrep("warning", "unknownerr"))
 
 
 check(raw_mtn("ls", "ignored"), 0, true, true)
@@ -25,11 +25,11 @@ copy("stderr", "ignorederr")
 check(not qgrep("foo", "ignored"))
 check(qgrep("bar", "ignored"))
 check(qgrep("xyzzy", "ignored"))
-check(qgrep("WARNING", "ignorederr"))
-check(grep("-qv", "WARNING|ignoring", "ignorederr"), 1)
+check(qgrep("warning", "ignorederr"))
+check(grep("-qv", "warning|skipping", "ignorederr"), 1)
 
 remove(".mtn-ignore")
 check(raw_mtn("ls", "ignored"), 0, true, true)
 check(qgrep("test.db", "stdout"))
-check(not qgrep("WARNING", "stderr"))
-check(grep("-qv", "WARNING|ignoring", "ignorederr"), 1)
+check(not qgrep("warning", "stderr"))
+check(grep("-qv", "warning|skipping", "ignorederr"), 1)
